still not finish

--- a/Flask-Routing-Lab/templates/home.html
+++ b/Flask-Routing-Lab/templates/home.html
@@ -2,9 +2,53 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>E-COMIC</title>
+
+
+
 </head>
 <body>
+ 
+    <center>
+    <h1> COMIC SHOP!!</h1>
+    <P>a community where everyone read comics and enjoy them</P>
+    <p>50%off for meet people ;) if u are staff u get 90%</p>
+    <h2> here is a sample of what we got , DISCOVER MORE!!</h2>
+    ---------------------------------------------------------------------------
+    <h1>COMICS:</h1>
+    </center>
 
+    <center>
+    <img src="https://img.buzzfeed.com/buzzfeed-static/static/2022-03/30/23/asset/759c159237df/sub-buzz-534-1648681892-8.jpg" , width="200px">
+    <img src="https://i.pinimg.com/550x/07/32/da/0732dae54f204161ef3cde191f2bbd34.jpg" , width="200px">
+    <img src= https://i.pinimg.com/236x/62/d6/7e/62d67e30e04a5bb28f2ab49b8bc281c9--hulk-avengers-comic-book-covers.jpg , width="200px"><br>
+    <img src=https://static.boredpanda.com/blog/wp-content/uploads/2020/01/Illustrator-recreates-season-1-of-The-Mandalorian-as-vintage-comic-book-covers-5e1bad1a61973__880.jpg , width="200px">
+    <img src=https://d29xot63vimef3.cloudfront.net/image/batman/1-1.jpg, width="200px">
+    <img src=https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSZYSyfelPMHJWY-UHRzV6YGNryrCWLPPubKg&usqp=CAU , width="200px">
+    <img src=https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQUVzY6f3McrEcCZzsv_mGPOh4bqLf5snK7Ig&usqp=CAU , width="200px">
+    <img src=https://static01.nyt.com/images/2019/10/04/arts/04spawn-301cover/04spawn-301cover-articleLarge.jpg?quality=75&auto=webp&disable=upscale , width="200px">
+    <img src=https://img.freepik.com/premium-vector/superhero-comic-cover-template-background_10876-527.jpg , width="200px">
+    </center>
+<center>
+<button type="button" class="block">ORDER COMICS!!</button>
+
+</center>
 </body>
+<center>
+--------------------------------------------------------------------------------------------------------
+</center
+<center>
+<body>
+<h2>this section is for books!</h2>
+<h3>look at them pick one!!</h3>
+</center>
+</body>
+
+
+
+
+
+
+
+
 </html>
