--- a/Flask-Routing-Lab/static/css/style.css
+++ b/Flask-Routing-Lab/static/css/style.css
@@ -1,1 +1,19 @@
-
+.p {
+  font-family: "Times New Roman", Times, serif;
+}
+.h1 {
+  font-family: "Times New Roman", Times, serif;
+}
+.h2 {
+  font-family: "Times New Roman", Times, serif;
+}
+.block {
+  display: block;
+  width: 100%;
+  border: none;
+  background-color: #04AA6D;
+  padding: 14px 28px;
+  font-size: 16px;
+  cursor: pointer;
+  text-align: center;
+}
