--- a/Flask-Routing-Lab/templates/home.html
+++ b/Flask-Routing-Lab/templates/home.html
@@ -21,7 +21,7 @@
     <center>
     <img src="https://img.buzzfeed.com/buzzfeed-static/static/2022-03/30/23/asset/759c159237df/sub-buzz-534-1648681892-8.jpg" , width="200px">
     <img src="https://i.pinimg.com/550x/07/32/da/0732dae54f204161ef3cde191f2bbd34.jpg" , width="200px">
-    <img src= https://i.pinimg.com/236x/62/d6/7e/62d67e30e04a5bb28f2ab49b8bc281c9--hulk-avengers-comic-book-covers.jpg , width="200px"><br>
+    <img src= https://i.pinimg.com/236x/62/d6/7e/62d67e30e04a5bb28f2ab49b8bc281c9--hulk-avengers-comic-book-covers.jpg , width="200px">
     <img src=https://static.boredpanda.com/blog/wp-content/uploads/2020/01/Illustrator-recreates-season-1-of-The-Mandalorian-as-vintage-comic-book-covers-5e1bad1a61973__880.jpg , width="200px">
     <img src=https://d29xot63vimef3.cloudfront.net/image/batman/1-1.jpg, width="200px">
     <img src=https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSZYSyfelPMHJWY-UHRzV6YGNryrCWLPPubKg&usqp=CAU , width="200px">
@@ -30,19 +30,21 @@
     <img src=https://img.freepik.com/premium-vector/superhero-comic-cover-template-background_10876-527.jpg , width="200px">
     </center>
 <center>
-<button type="button" class="block">ORDER COMICS!!</button>
+<a href="product" target="_blank">COMICS HERE!!</a>
+    </center>
+    <style>
+        a:link, a:visited {
+            background-color: #FF0000;
+            color: black;
+            padding: 14px 25px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+        }
+    </style>
+</center>
+</body>
 
-</center>
-</body>
-<center>
---------------------------------------------------------------------------------------------------------
-</center
-<center>
-<body>
-<h2>this section is for books!</h2>
-<h3>look at them pick one!!</h3>
-</center>
-</body>
 
 
 
