--- a/Flask-Routing-Lab/templates/product.html
+++ b/Flask-Routing-Lab/templates/product.html
@@ -5,6 +5,20 @@
     <title>Product</title>
 </head>
 <body>
+<h1 , align="center"> ALL THE COMICS HERE FOR 220 BUCKS , FOLLOW ME ON INSTAGRAM FOR DSICOUNT CODESSSS !!!!(INSTGRAM : W4RD3BD0)</h1>
+<center>
+<hr width="200px" align="left">   
+<img src="https://img.buzzfeed.com/buzzfeed-static/static/2022-03/30/23/asset/759c159237df/sub-buzz-534-1648681892-8.jpg" , width="200px">
+    <hr width="200px" align="left">    
+    <img src="https://i.pinimg.com/550x/07/32/da/0732dae54f204161ef3cde191f2bbd34.jpg" , width="200px">    <hr width="200px" align="left">
+    <img src= https://i.pinimg.com/236x/62/d6/7e/62d67e30e04a5bb28f2ab49b8bc281c9--hulk-avengers-comic-book-covers.jpg , width="200px">
+    <hr width="200px" align="left">
+    <img src=https://static.boredpanda.com/blog/wp-content/uploads/2020/01/Illustrator-recreates-season-1-of-The-Mandalorian-as-vintage-comic-book-covers-5e1bad1a61973__880.jpg , width="200px">
+    <hr width="200px" align="left">
 
+    <hr width="200px" align="left">
+    <img src=https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSZYSyfelPMHJWY-UHRzV6YGNryrCWLPPubKg&usqp=CAU , width="200px">
+    <img src=https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQUVzY6f3McrEcCZzsv_mGPOh4bqLf5snK7Ig&usqp=CAU , width="200px">   
+</center>   
 </body>
 </html>
