--- a/Flask-Routing-Lab/templates/product.html
+++ b/Flask-Routing-Lab/templates/product.html
@@ -5,7 +5,7 @@
     <title>Product</title>
 </head>
 <body>
-<h1 , align="center"> ALL THE COMICS HERE FOR 220 BUCKS , FOLLOW ME ON INSTAGRAM FOR DSICOUNT CODESSSS !!!!(INSTGRAM : W4RD3BD0)</h1>
+<h1 , align="center"> ALL THE COMICS HERE FOR 20 BUCKS </h1>
 <center>
 <hr width="200px" align="left">   
 <img src="https://img.buzzfeed.com/buzzfeed-static/static/2022-03/30/23/asset/759c159237df/sub-buzz-534-1648681892-8.jpg" , width="200px">
@@ -20,5 +20,7 @@
     <img src=https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSZYSyfelPMHJWY-UHRzV6YGNryrCWLPPubKg&usqp=CAU , width="200px">
     <img src=https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQUVzY6f3McrEcCZzsv_mGPOh4bqLf5snK7Ig&usqp=CAU , width="200px">   
 </center>   
+
+<a href="product.html" target="_blank">COMICS HERE!!</a>
 </body>
 </html>
